tablet view horizontal scroll bar fix #735

--- a/wp-content/themes/wp-reddoor/static/styles/src/style.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/style.less
@@ -186,6 +186,22 @@
   }
 }
 
+/* ----------- iPad 3 and 4 ----------- */
+/* Portrait and Landscape */
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (orientation: landscape)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .menu-header-container{
+    .menuDesktop{
+      .sub-menu{
+        width: 768px;
+      }
+    }
+  }
+}
+
 // Small Screens Only
 @media screen and (max-width: @adaptMobile) {
   body {
